[package]
name = "rtpx"
version = "1.0.4"
authors = ["glacierx <rong.xian@gmail.com>"]
edition = "2021"
description = "Safe Rust bindings for CTP (Comprehensive Transaction Platform) and its variations for Chinese financial markets"
homepage = "https://github.com/glacierx/RTP"
repository = "https://github.com/glacierx/RTP"
readme = "README.md"
keywords = ["ctp", "trading", "finance", "ffi", "china"]
categories = ["api-bindings", "finance", "external-ffi-bindings"]
license = "MIT/Apache-2.0"

[lib]
name = "rtp"
path = "src/lib.rs"

[features]
channel = ["crossbeam-channel"]
default = ["ctp"]  # Default SDK to build
ctp = []          # CTP SDK
atp = []          # ATP SDK
xtp = []          # XTP SDK

# Ensure only one SDK is enabled
[package.metadata.features]
mutually_exclusive = ["ctp", "atp", "xtp"]

[dependencies]
crossbeam-channel = { version = "0.5", optional = true }
tokio="1.42"
memchr = "2.3.3"
encoding = "0.2"
simple-error = "0.3.1"
# time="0.1.43"
time="0.3"

[build-dependencies]
bindgen="0.70"

# For GB18030 encoding/decoding
encoding = "0.2"
# For XML parsing
xmltree="0.11.0"
simple-error = "0.3.1"


[profile.release]
#strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true
codegen-units = 1